ServidorSeguridadInesMR/src/main/java/com/example/servidorseguridadinesmr/domain/model/error/ErrorSec.java
package com.example.servidorseguridadinesmr.domain.model.error;

import java.time.LocalDateTime;

public class ErrorSec {

    private int numError;
    private String message;
    private LocalDateTime dateStamp;

}
